--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -13,6 +13,7 @@ http {
         index index.php index.nginx-debian.html;
 
         location / {
+		include /etc/nginx/mime.types;
             try_files $uri $uri/ /index.php$is_args$args;
         }
 
