--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -16,6 +16,7 @@ RUN apk add --no-cache \
 	php-ctype \
 	php-mbstring \
 	php-gd \
+	mariadb-client \
 	curl
 
 RUN addgroup -S www-data || true && adduser -S -G www-data www-data || true
@@ -27,7 +28,11 @@ RUN curl -O https://wordpress.org/latest.tar.gz \
 	&& rm latest.tar.gz \
 	&& chown -R nobody:nobody /var/www/html
 
-COPY config/php-fpm.conf /etc/php7/php-fpm.d/www.conf
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x wp-cli.phar \
+    && mv wp-cli.phar /usr/local/bin/wp
+
+COPY config/php-fpm.conf /etc/php81/php-fpm.d/www.conf
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
