--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -1,6 +1,20 @@
 FROM alpine:3.18
-RUN apk add --no-cache mariadb mariadb-client
-RUN mkdir -p /run/mysqld && chown mysql:mysql /run/mysqld
-EXPOSE 3306
-CMD ["mysqld_safe"]
 
+RUN apk add --no-cache mariadb mariadb-client
+
+RUN mkdir -p /var/run/mysqld && chown mysql:mysql /var/run/mysqld
+RUN mkdir -p /docker-entrypoint-initdb.d
+
+COPY conf/conf.cnf /etc/my.cnf.d/conf.cnf
+COPY conf/conf.cnf /etc/my.cnf
+RUN rm /etc/my.cnf.d/mariadb-server.cnf && mv /etc/my.cnf.d/conf.cnf /etc/my.cnf.d/mariadb-server.cnf
+
+COPY scripts/entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+COPY scripts/setup.sh /docker-entrypoint-initdb.d/
+RUN chmod +x /docker-entrypoint-initdb.d/setup.sh
+
+EXPOSE 3306
+
+ENTRYPOINT ["entrypoint.sh"]
